--- a/.github/workflows/share-to-mastodon.yml
+++ b/.github/workflows/share-to-mastodon.yml
@@ -22,14 +22,37 @@ jobs:
           if [ -z "$latest" ] || [ "$latest" = "null null" ]; then echo "no posts"; exit 0; fi
           echo "LATEST=$latest" >> $GITHUB_ENV
 
+      - name: Check last posted and update guard
+        id: dedupe
+        run: |
+          LAST_FILE=last_post.txt
+          # read existing last post (if any)
+          if [ -f "$LAST_FILE" ]; then last=$(cat "$LAST_FILE"); else last=""; fi
+          echo "LAST=$last" >> $GITHUB_ENV
+          # if same as latest, skip
+          if [ "$last" = "$LATEST" ]; then echo "SAME_POST=true" >> $GITHUB_ENV; else echo "SAME_POST=false" >> $GITHUB_ENV; fi
+
       - name: Post to Mastodon
-        if: env.LATEST != ''
+        if: env.LATEST != '' && env.SAME_POST != 'true'
         env:
           MASTODON_INSTANCE: ${{ secrets.MASTODON_INSTANCE }}
           MASTODON_TOKEN: ${{ secrets.MASTODON_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [ -z "$MASTODON_INSTANCE" ] || [ -z "$MASTODON_TOKEN" ]; then echo "Mastodon secrets not set, skipping"; exit 0; fi
-          curl -s -X POST "https://${MASTODON_INSTANCE}/api/v1/statuses" \
+          # post to Mastodon
+          resp=$(curl -s -X POST "https://${MASTODON_INSTANCE}/api/v1/statuses" \
             -H "Authorization: Bearer ${MASTODON_TOKEN}" \
-            -F "status=${LATEST}" \
-            | jq . || true
+            -F "status=${LATEST}") || true
+          echo "$resp" | jq . || true
+          # save latest to last_post.txt and commit it so future runs see it
+          echo "$LATEST" > last_post.txt
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add last_post.txt || true
+          git commit -m "chore: update last posted headline" || true
+          git push || true
+
+      - name: Skip posting note
+        if: env.SAME_POST == 'true'
+        run: echo "Latest post already shared; skipping Mastodon post."
