--- a/.github/workflows/deploy-pages-artifact.yml
+++ b/.github/workflows/deploy-pages-artifact.yml
@@ -8,7 +8,7 @@ on:
 permissions:
   pages: write
   id-token: write
-  contents: read
+  contents: write
 
 jobs:
   build-and-upload:
@@ -46,7 +46,9 @@ jobs:
           echo '}' >> public/analytics.json
           echo "Created public/analytics.json (not committed)"
 
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Deploy to `gh-pages` branch
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: public
+          publish_dir: public
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
